FEAT left side of player

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/47e16b9a1e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-webapp">
@@ -19,7 +21,18 @@
     <div class="player">
         
         <div class="album-player">
-            album
+            <figure class="album-cover-player">
+                <img src="./img/sinister.jpeg" alt="sinister">
+            </figure>
+            <div class="info-song">
+                <span class="brano-player">Sinister</span>
+                <span class="artist-player">Brano Nome</span>
+            </div>
+            <div class="icon-group">
+                <i class="fa-regular fa-heart icon-small icon-gray"></i>
+                <i class="fa-regular fa-folder icon-small icon-gray"></i>
+            </div>
+
         </div>
         <div class="media-player">
             <div class="button-player">pulsanti
