FEAT sidebar starting

--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
 </head>
 <body>
     <div class="container-webapp">
+        <!-- SEZIONE SIDEBAR -->
         <div class="sidebar">
-            
+            <figure>
+                <img src="./img/logo.svg" alt="logo">                
+            </figure>
+            <ul class="sidebar-items">
+                <li>
+                    <img class="svg-icon" src="./img/home.svg" alt=""> Home
+                </li>
+                <li>
+                   <img class="svg-icon" src="./img/search.svg" alt=""> Cerca
+                </li>
+                <li>
+                   <img class="svg-icon" src="./img/libreria.svg" alt=""> La tua libreria</li>
+            </ul>
+            <div>
+                <h4 class="playlist">PLAYLIST</h4>
+
+            </div>
         </div>
         <div class="home">
             
