FEAT sidebar playlist

--- a/index.html
+++ b/index.html
@@ -14,20 +14,38 @@
         <!-- SEZIONE SIDEBAR -->
         <div class="sidebar">
             <figure>
-                <img src="./img/logo.svg" alt="logo">                
+                <img class="logo-big" src="./img/logo.svg" alt="logo">   
+                <img src="./img/logo-small.svg" alt="" class="logo-small">             
             </figure>
+            
             <ul class="sidebar-items">
                 <li>
-                    <img class="svg-icon" src="./img/home.svg" alt=""> Home
+                    <img class="svg-icon" src="./img/home.svg" alt=""> 
+                    <span class="svg-icon-name">Home</span>
                 </li>
                 <li>
-                   <img class="svg-icon" src="./img/search.svg" alt=""> Cerca
+                   <img class="svg-icon" src="./img/search.svg" alt="">
+                   <span class="svg-icon-name">Cerca</span>
                 </li>
                 <li>
-                   <img class="svg-icon" src="./img/libreria.svg" alt=""> La tua libreria</li>
+                   <img class="svg-icon" src="./img/libreria.svg" alt="">
+                    <span class="svg-icon-name">La tua libreria</span>
+                </li>
             </ul>
-            <div>
-                <h4 class="playlist">PLAYLIST</h4>
+            <div class="playlist-container">                
+                <h4 class="playlist-title">PLAYLIST</h4>
+                <i class="fa-solid fa-square-plus"></i>
+                <span>Crea Playlist</span>
+                <ul class="nome-playlist">
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+                
 
             </div>
         </div>
